--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -11,3 +11,23 @@
     justify-content: space-between;
     font-weight: bold;
 }
+.buttons {
+	display: flex;
+	justify-content: flex-end;
+  }
+  .button {
+	border: none;
+	background-color: #fff;
+	&:hover {
+	  cursor: pointer;
+	}
+	i {
+	  color: blue;
+	}
+	
+  }
+  .isActive {
+	i {
+	  color: gold;
+	}
+  }
